use non deprecated Thread method